Correctly aligned the navigation menu.

--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 
-ul .options {
+#Navigation ul .options {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -65,20 +65,19 @@ ul .options {
     text-size: 1em;*/
 }
 
-li {
-    display: inline;
-    float: left;
+#Navigation li {
+    display: inline-block;
 }
 
-li a {
-    display: block;
+#Navigation li a {
+    display: inline-block;
     padding: 0px 6px;
     width: 60px;
     color: white;
 }
 
-ul .button {
-    display:block;
+#Navigation ul .button {
+    display:inline-block;
     text-decoration:none;
     width:80%;
     margin: 0 auto;
@@ -88,16 +87,22 @@ ul .button {
 }
 
 #Navigation {
-    padding: 0px;
+    /*padding: 0px;
     box-shadow: 0px 0px 5px rgba(0.5, 0.5, 0.5, 0.5);
     border: 1px solid transparent;
-    /*background-color: rgba(180, 205, 205, 0.6);*/
+    /*background-color: rgba(180, 205, 205, 0.6);
     margin: 0 auto;
-    width:100%;
     position:relative;
-    margin-bottom: 25px;
+    margin-bottom: 25px;*/
+    text-align:justify;
+    min-width: 500px;
+}
+#Navigation:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
 }
 
-li a:hover {
+#Navigation li a:hover {
         background-color: rgba(34,29,29,0.8);
 }
